tests/import/t22065.nim
discard """
  errormsg: "cannot open file: ./asynchttpserver"
"""

import ./asynchttpserver